--- a/exercise/Module3Assignment/index.html
+++ b/exercise/Module3Assignment/index.html
@@ -15,6 +15,7 @@
     <title>Boostrap Starter Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin-ext" rel="stylesheet">
   </head>
 <body>
 
@@ -29,14 +30,24 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <!-- <a class="navbar-brand" href="#">Brand</a> --><!-- 
+      <nav class="navbar navbar-default">
+  		<div class="container-fluid">
+    		<div class="navbar-header"> -->
+      <a class="navbar-brand" href="#">
+       	<img alt="Brand" src="Mushroom.ico" width="30px" height="30px">
+      </a>
+      <a class="navbar-brand" href="#"><h1>Food LCC</h1></a>	
+    	<!-- 	</div>
+  		</div>
+	  </nav> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link2</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -50,24 +61,14 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
+      
+      <ul class="nav navbar-nav navbar-right">
+        <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
