--- a/exercise/Module3Assignment/index.html
+++ b/exercise/Module3Assignment/index.html
@@ -12,10 +12,13 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Boostrap Starter Page</title>
+    <title>Home</title>
+    <link rel="icon" href="Mushroom.ico">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton&subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
   </head>
 <body>
 
@@ -47,7 +50,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link2</a></li>
+        <li><a href="#">Menu</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -74,6 +77,33 @@
   </div><!-- /.container-fluid -->
 </nav>
 <!-- Nav bar End-->
+
+<!-- Main content begin -->
+<div id="main-content" class="container">
+	<h2 id="home-page-title" class="text-center">Our Menu</h2>
+<!-- grid system begin -->
+	<div class="row">
+		<div id="chicken" class="col-xs-12 col-md-6 col-lg-4">
+			<div class="section">
+			<h2 class="text-center">Chicken</h2>	
+			<p class="text-justify">Does the implementation use inline CSS styles at all (not allowed) or does it reference an external CSS file?Is the default navbar implemented such that it scrolls away with the page, i.e., it's not statically attached to the top of bottom of the screen?Does the brand name "Food, LLC" properly aligned to the left of the navbar and does it use navbar-brand class?Is the dropdown menu button only visible when the browser is narrow enough to be in mobile view?Does clicking the dropdown menu button make the dropdown menu to slide down? Does it take up the entire width of the browser (minus some margins)? Is the label of the each menu item (e.g., "Chicken") centered using a Bootstrap class?Is the page heading, "Our Menu", centered on the screen using the Bootstrap class?Is the single cell section (or multiple sections as per optional part of the assignment) using the Bootstrap Grid System and is the section tall enough to force the viewer to scroll if they wanted to get to the bottom of the page.</p>
+			</div>
+		</div>
+		<div id="beef" class="col-xs-12 col-md-6 col-lg-4">
+			<div class="section">
+			<h2 class="text-center">Beef</h2>
+			<p class="text-justify">Does the implementation use inline CSS styles at all (not allowed) or does it reference an external CSS file?Is the default navbar implemented such that it scrolls away with the page, i.e., it's not statically attached to the top of bottom of the screen?Does the brand name "Food, LLC" properly aligned to the left of the navbar and does it use navbar-brand class?Is the dropdown menu button only visible when the browser is narrow enough to be in mobile view?Does clicking the dropdown menu button make the dropdown menu to slide down? Does it take up the entire width of the browser (minus some margins)? Is the label of the each menu item (e.g., "Chicken") centered using a Bootstrap class?Is the page heading, "Our Menu", centered on the screen using the Bootstrap class?Is the single cell section (or multiple sections as per optional part of the assignment) using the Bootstrap Grid System and is the section tall enough to force the viewer to scroll if they wanted to get to the bottom of the page.</p>
+			</div>				
+		</div>	
+		<div id="sushi" class="col-xs-12 col-md-12 col-lg-4">
+			<div class="section">
+			<h2 class="text-center">Sushi</h2>
+			<p class="text-justify">Does the implementation use inline CSS styles at all (not allowed) or does it reference an external CSS file?Is the default navbar implemented such that it scrolls away with the page, i.e., it's not statically attached to the top of bottom of the screen?Does the brand name "Food, LLC" properly aligned to the left of the navbar and does it use navbar-brand class?Is the dropdown menu button only visible when the browser is narrow enough to be in mobile view?Does clicking the dropdown menu button make the dropdown menu to slide down? Does it take up the entire width of the browser (minus some margins)? Is the label of the each menu item (e.g., "Chicken") centered using a Bootstrap class?Is the page heading, "Our Menu", centered on the screen using the Bootstrap class?Is the single cell section (or multiple sections as per optional part of the assignment) using the Bootstrap Grid System and is the section tall enough to force the viewer to scroll if they wanted to get to the bottom of the page.</p>
+			</div>
+		</div>		
+	</div><!-- grid system begin -->
+</div>	
+<!-- Main content end -->
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
