--- a/exercise/Module3Assignment/index.html
+++ b/exercise/Module3Assignment/index.html
@@ -108,9 +108,15 @@
 			</div>
 		</div>		
 	</div><!-- grid system begin -->
-</div>	
-<!-- Main content end -->
+</div>	<!-- Main content end -->
 
+<!-- footer begin -->
+<footer class="panel-footer">
+    <div class="container">
+        <div class="text-center">&copy; Copyright 2016</div>
+    </div>
+  </footer>
+<!-- footer end -->
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
